<resources>
    <string name="aurasma_trackingActivityName">com.aurasma.aurasma.trackingar.TrackingActivity</string>
    <string name="aurasma_loginActivityName">Create Aurasma Account</string>
    <string name="aurasma_ExistingAccount">Existing account</string>
    <string name="aurasma_ExistingAccountSubtext">select to use existing account</string>
    <string name="aurasma_Username">User name</string>
    <string name="aurasma_Password">Password</string>
    <string name="aurasma_confirm_password">Confirm Password</string>
    <string name="aurasma_Email">Email</string>
    <string name="aurasma_CreateAccount">Create Account</string>
    <string name="aurasma_LoginFailure">Sorry, unable to login</string>
    <string name="aurasma_InvalidEmailAddress">Sorry, the email address is invalid</string>
    <string name="aurasma_InvalidUsername">Sorry, the user name is invalid. It should be at least 3 characters long and allowed characters are: letters, numbers and .-_</string>
    <string name="aurasma_InvalidPassword">Sorry, the password is invalid. It cannot be blank.</string>
    <string name="aurasma_noMatchPassword">Sorry, the passwords do not match. Please try again.</string>
    <string name="aurasma_InvalidUsernameOrPassword">There was a problem with your chosen username, password or email - please try again</string>
    <string name="aurasma_Signin">Sign In</string>
    <string name="aurasma_Signout">Sign Out</string>
    <string name="aurasma_SignInRequiredForFeature">"To use this feature you need to register. Registering is free and you don't even have to give an email address."</string>
    <string name="aurasma_SignInRequiredForChannelSubscription">"To subscribe to the channel you need to register.\nRegistering is free and you don't even have to give an email address. Would you like to register?"</string>
    <string name="aurasma_Register">Register</string>
    <string name="aurasma_AddAuraActivityName">Enter details for Aura</string>
    <string name="aurasma_SelectAugmentationActivity">Add Aura</string>
    <string name="aurasma_AddChannelActivityName">Enter details for channel</string>
    <string name="aurasma_ExistingChannelActivity">Select a Channel</string>
    <string name="aurasma_AugmentationSearchName">Select an accessory to add</string>
    <string name="aurasma_BlinkxSearchName">Select a blinkx video to add</string>
    <string name="aurasma_AnywheresTabBarName">View Auras</string>
    <string name="aurasma_ChannelsTabBarName">View Channels</string>
    <string name="aurasma_focusCameratext">Focus</string>
    <string name="aurasma_AutoFocusHintText">Tap Screen to Focus</string>
    <string name="aurasma_person_detection_mode">Person Detection Mode</string>
    <string name="aurasma_person_detection">Detect Person</string>
    <string name="aurasma_AnywhereCreationInfo">Creating an Aura \nCan be viewed anywhere</string>
    <string name="aurasma_HappeningCreationInfo">Creating a Location Aura \nCan only be viewed at this location</string>
    <string name="aurasma_ok">@android:string/ok</string>
    <string name="aurasma_error_dialog">Sorry, an Error occurred!</string>
    <string name="aurasma_out_of_memory_error">Sorry, unable to download at this time.</string>
    <string name="aurasma_aurasmaWebsiteUrl">http://www.aurasma.com</string>
    <string name="aurasma_errorOops">Oops!</string>
    <string name="aurasma_errorWarning">Warning</string>
    <string name="aurasma_error_text">Error</string>
    <string name="aurasma_confirm_text">Confirm</string>
    <string name="aurasma_error_dialog_button1">Retry</string>
    <string name="aurasma_error_dialog_button2">Close App</string>
    <string name="aurasma_strUserProfile">User Profile</string>
    <string name="aurasma_AnywhereLimitExceeded">Unable to create Aura\nMaximum non-location aura limit reached</string>
    <string name="aurasma_auraWorldCropFailed">Sorry something went wrong when choosing the area used in your photo. Please try again.</string>
    <string name="aurasma_auraWorldOutOfMemory">Sorry something went wrong when taking the photo. Please try again.</string>
    <string name="aurasma_anywhereWorldCreateFailed">The training on your photo failed. Please try again.</string>
    <string name="aurasma_auraCreateFailed">"Your Aura failed to be added to Aurasma Central."</string>
    <string name="aurasma_anywhereBlinkxUploadFailed">blinkx Video Upload Failed. Please try again.</string>
    <string name="aurasma_anywhereUploadTooLarge">File is too large to be uploaded. Please select another video</string>
    <string name="aurasma_unsupportedVideoFormat">Sorry, this video is of an incompatible format. Please select another video</string>
    <string name="aurasma_anywhereUploadFailed">File Upload failed. Please try again.</string>
    <string name="aurasma_auraCreated">"Your Aura, %1s, is now available on your device."</string>
    <string name="aurasma_loginAuthenticationError">There was a login problem - please check your username and password</string>
    <string name="aurasma_networkError">Having a problem talking to Aurasma Central – please check your signal strength or network setting and try again</string>
    <string name="aurasma_networkStartError">Aurasma requires internet access the first time it is run. Please check your network connection and try again.</string>
    <string name="aurasma_usernameTakenError">That username has been taken - please pick another</string>
    <string name="aurasma_loginCookieError">Your login cookie has expired. Please login again.</string>
    <string name="aurasma_databaseError">Unable to search local database</string>
    <string name="aurasma_basicDownloadManagerError">There was a problem downloading from Aurasma Central</string>
    <string name="aurasma_searchError">Unable to perform search. Please try again later.</string>
    <string name="aurasma_nativeCodeError">Sorry, Aurasma is incompatible with your device.</string>
    <string name="aurasma_noPreviewSizeError">Sorry, your camera is not configured properly for Aurasma.</string>
    <string name="aurasma_generalCameraError">Sorry, there was a problem opening the camera on your device. Please try restarting Aurasma.</string>
    <string name="aurasma_cameraBeingUsedError">There is another application using the camera. Please close down any application that may be using the camera.</string>
    <string name="aurasma_sdCardError">Sorry, Aurasma is unable to access your SD card. Please turn off USB storage or reinsert the SD card.</string>
    <string name="aurasma_noLocationError">Aurasma cannot determine your location accurately enough to create a Location Aura. \nPlease check Location services are enabled, if they are, it may take a few minutes to find a valid location.\nYou can, however, always create a non-location aura.</string>
    <string name="aurasma_noLocationWarning">To work properly, Aurasma needs location services to be enabled. To enable, go to Settings > Location &amp; security.</string>
    <string name="aurasma_imageExistsWarning">Sorry this image has already been trained. Please take a picture of another object to create your Aura.</string>
    <string name="aurasma_auraNoTitleError">You must set a title for the Aura</string>
    <string name="aurasma_auraNoAugError">You must choose an accessory for your Aura\nIf an upload is in progress, please wait for it to finish</string>
    <string name="aurasma_augErrorPosition">There was a problem loading this aura, please select another.</string>
    <string name="aurasma_augErrorTracking">There was a problem loading this aura.</string>
    <string name="aurasma_happeningNoChannelError">You must set a channel for the Location Aura</string>
    <string name="aurasma_channelNoTitleOrImageError">You must set a title and image for the channel</string>
    <string name="aurasma_channelNoTitleError">You must set a title for the channel</string>
    <string name="aurasma_channelNoImageError">You must set an image for the channel</string>
    <string name="aurasma_cannotloadlinkerror">Sorry, this content is not available on this device</string>
    <string name="aurasma_noSDCardSpaceError">Sorry, there is insufficient space on your SD Card to start Aurasma - please free some space and try again.</string>
    <string name="aurasma_lowSDCardSpaceError">Your SD Card is running low on space which may cause Aurasma to not fully work - please free some space and try again.</string>
    <string name="aurasma_noTrActInManifestError">Cannot find com.aurasma.aurasma.trackingar.TrackingActivity in the Manifest.</string>
    <string name="aurasma_webCacheError">Sorry, there was a problem launching help. Please visit our website for further help.</string>
    <string name="aurasma_screenshotFailed">Sorry, unable to create screenshot.</string>
    <string name="aurasma_screenshotUploadFailed">Sorry, unable to upload screenshot. Please try again.</string>
    <string name="aurasma_actionError">Unable to execute this action.</string>
    <string name="aurasma_chooseMedia">Choose Media</string>
    <string name="aurasma_maps">Location Auras</string>
    <string name="aurasma_settings">Settings</string>
    <string name="aurasma_channels">Channels</string>
    <string name="aurasma_happening">Add Location Aura</string>
    <string name="aurasma_just_happening">Location Aura</string>
    <string name="aurasma_anywhere">Add Aura</string>
    <string name="aurasma_just_anywhere">Aura</string>
    <string name="aurasma_aura">Add Aura</string>
    <string name="aurasma_create">Create</string>
    <string name="aurasma_help">Help</string>
    <string name="aurasma_current_anywheres">Current Auras</string>
    <string name="aurasma_deleteChannelButton">Delete Channel</string>
    <string name="aurasma_privacyPublic">Public</string>
    <string name="aurasma_privacyPrivate">Private</string>
    <string name="aurasma_happeningdefaulttitle">Enter a title for this Location Aura</string>
    <string name="aurasma_choosehappeningchannel">Select a channel for this Location Aura</string>
    <string name="aurasma_anywheredefaulttitle">Enter a title for this Aura</string>
    <string name="aurasma_augphotobuttontext">Upload Image</string>
    <string name="aurasma_augvideobuttontext">Upload Video</string>
    <string name="aurasma_auglibbuttontext">Search Library</string>
    <string name="aurasma_augblinkxbuttontext">Search blinkx videos</string>
    <string name="aurasma_happeningSavebuttontext">Add Location Aura</string>
    <string name="aurasma_anywhereSavebuttontext">Add Aura</string>
    <string name="aurasma_cancelbuttontext">@android:string/cancel</string>
    <string name="aurasma_searchForAuraHint">Search for Auras</string>
    <string name="aurasma_sourcetext">Source:</string>
    <string name="aurasma_searchaurasmabuttontext">Aurasma</string>
    <string name="aurasma_searchandroidbuttontext">My Android</string>
    <string name="aurasma_searchanimationbuttontext">Animation</string>
    <string name="aurasma_searchimagebuttontext">Image</string>
    <string name="aurasma_searchthreedbuttontext">3D</string>
    <string name="aurasma_searchblinkxbuttontext">blinkx Video</string>
    <string name="aurasma_searchallbuttontext">All</string>
    <string name="aurasma_photo">Photo</string>
    <string name="aurasma_video">Video</string>
    <string name="aurasma_sendanywheresmsmenutext">Send Aura via SMS</string>
    <string name="aurasma_sendanywhereemailmenutext">Send Aura via email</string>
    <string name="aurasma_sendanywheretwittermenutext">Send Aura via Twitter</string>
    <string name="aurasma_sendanywherefacebookmenutext">Send Aura via Facebook</string>
    <string name="aurasma_sendscreenshottwittertext">Share via Twitter</string>
    <string name="aurasma_sendscreenshotfacebooktext">Share via Facebook</string>
    <string name="aurasma_savescreenshottext">Save to Gallery</string>
    <string name="aurasma_newbutton">New</string>
</resources>