<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    >
    <Button
       android:id="@+id/aurasma_shareEmailButton"
       style="@style/aurasma_roundedBlueButton"
       android:text="@string/aurasma_sendanywhereemailmenutext"
       android:textSize="16dp"
       android:padding="10dp"
       android:layout_width="fill_parent"
       android:layout_height="wrap_content"
       android:layout_weight="1"
     />
    <Button
       android:id="@+id/aurasma_shareSmsButton"
       style="@style/aurasma_roundedBlueButton"
       android:text="@string/aurasma_sendanywheresmsmenutext"
       android:textSize="16dp"
       android:padding="10dp"
       android:layout_width="fill_parent"
       android:layout_height="wrap_content"
       android:layout_weight="1"
     />
    <Button
       android:id="@+id/aurasma_shareTwitterButton"
       style="@style/aurasma_roundedBlueButton"
       android:text="@string/aurasma_sendanywheretwittermenutext"
       android:textSize="16dp"
       android:padding="10dp"
       android:layout_width="fill_parent"
       android:layout_height="wrap_content"
       android:layout_weight="1"
     />
    <Button
       android:id="@+id/aurasma_sharefacebookButton"
       style="@style/aurasma_roundedBlueButton"
       android:text="@string/aurasma_sendanywherefacebookmenutext"
       android:textSize="16dp"
       android:padding="10dp"
       android:layout_width="fill_parent"
       android:layout_height="wrap_content"
       android:layout_weight="1"
     />
</LinearLayout>