<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content">
    <TextView
            android:id="@+id/aurasma_giveName"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:text="@string/aurasma_chooseMedia"
            android:textSize="18sp"
            android:textColor="#FFFF"
            android:paddingLeft="10dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            />
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    >
    <Button
       android:id="@+id/aurasma_photoChosenButton"
       style="@style/aurasma_roundedBlueButton"
       android:text="@string/aurasma_photo"
       android:textSize="24dp"
       android:padding="10dp"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_weight="1"
     />
     <Button
       android:id="@+id/aurasma_videoChosenButton"
       style="@style/aurasma_roundedBlueButton"
       android:text="@string/aurasma_video"
       android:textSize="24dp"
       android:padding="10dp"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_weight="1"
     />
</LinearLayout>
</LinearLayout>